# django-adminlte2-templates

./: .coveragerc  .eslintignore  .eslintrc  .stylelintrc  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  coverage.sh  setup.cfg  setup.py  setup.sh  tox.ini
adminlte2_templates/: constants.py  context_processors.py  core.py
adminlte2_templates/templatetags/: adminlte2_tags.py
docs/: conf.py  index.rst  installation.rst  layouts_and_components.rst  quickstart.rst  settings.rst  template_blocks.rst  template_tags.rst
docs/template_blocks/: extras.rst  general.rst  layouts.rst  pages.rst
example_project/: requirements.txt
example_project/example_project/: settings.py  urls.py
example_project/layouts/: apps.py  forms.py  urls.py  views.py
tests/: imports.py  settings.py  tests.py  urls.py
tests/add_active/: tests.py  urls.py  views.py
tests/add_attr/: forms.py  tests.py  urls.py  views.py
tests/add_class/: forms.py  tests.py  urls.py  views.py
tests/contexts/: tests.py
tests/gravatar_url/: tests.py  urls.py  views.py
tests/layouts/: tests.py  urls.py  views.py
tests/page_title/: tests.py  urls.py  views.py
tests/paginator/: tests.py  urls.py  views.py
tests/templates/: add_active.html  add_class.html  gravatar_url.html  paginator.html
tests/tests/: __init__.py  test_add_active.py  test_add_class.py  test_context.py  test_gravatar_url.py  test_page_title.py  test_paginator.py  test_templates.py
tests/urls/: __init__.py  add_active.py  add_class.py  gravatar_url.py  page_title.py  paginator.py  templates.py
(+113 files in other folders)
